--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Minimal theme
+title: Prathyusha
 logo: /assets/img/Prathyusha.jpeg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
