--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Prathyusha
+title: <p align="center"> Prathyusha </p>
 logo: /assets/img/Prathyusha.jpeg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
